--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -29,4 +29,12 @@
         android:text="CCC"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"/>
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="DDD"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"/>
 </LinearLayout>
