--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,7 @@
         android:paddingTop="16dp"
         android:paddingLeft="16dp"/>
     <TextView
-        android:id="@+id/locationTextView"
+        android:id="@+id/location_offset"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -22,7 +22,7 @@
         android:paddingTop="16dp"
         android:paddingLeft="16dp"/>
     <TextView
-        android:id="@+id/dateTextView"
+        android:id="@+id/primary_location"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -30,11 +30,19 @@
         android:paddingTop="16dp"
         android:paddingLeft="16dp"/>
     <TextView
+        android:id="@+id/dateTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Mar 6,2010"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"/>
+    <TextView
         android:id="@+id/timeTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="DDD"
+        android:text="3:00 PM"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"/>
 </LinearLayout>
