Working on the magnitude (convert + cercle) / UI

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,48 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingEnd="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingStart="16dp"
     android:id="@+id/listViewDetails">
 
 
     <TextView
         android:id="@+id/magTextView"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        tools:text="8.9"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/magnitude_circle"/>
+
+    <LinearLayout
+        android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:text="AAA"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/location_offset"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
         android:layout_weight="1"
-        android:text="BBB"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"/>
+        android:fontFamily="sans-serif-medium"
+        android:textAllCaps="true"
+        android:textColor="@color/textColorEarthquakeDetails"
+        android:textSize="12sp"
+        tools:text="BBB"
+        android:layout_marginLeft="16dp"
+        android:paddingTop="16dp"/>
     <TextView
         android:id="@+id/primary_location"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textColor="@color/textColorEarthquakeLocation"
         android:layout_weight="1"
-        android:text="CCC"
-        android:paddingTop="16dp"
+        tools:text="CCC"
         android:paddingLeft="16dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/dateTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Mar 6,2010"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"/>
+        tools:text="Mar 6,2010"
+        android:layout_gravity="end"
+        android:paddingLeft="16dp"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif-medium"
+        android:textAllCaps="true"
+        android:textColor="@android:color/tertiary_text_dark"
+        android:textSize="12sp"/>
     <TextView
         android:id="@+id/timeTextView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="3:00 PM"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"/>
+        android:layout_gravity="end"
+        tools:text="3:00 PM"
+        android:paddingLeft="16dp"
+        android:ellipsize="end"
+        android:fontFamily="sans-serif-medium"
+        android:textAllCaps="true"
+        android:textColor="@android:color/tertiary_text_dark"
+        android:textSize="12sp"/>
+    </LinearLayout>
 </LinearLayout>
