--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,14 +13,14 @@
     <TextView
         android:id="@+id/magTextView"
         android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         tools:text="8.9"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textSize="16sp"
         android:textColor="@android:color/white"
-        android:background="@drawable/magnitude_circle"/>
+        android:background="@drawable/magnitude_circle" />
 
     <LinearLayout
         android:layout_weight="1"
